droplet-1.03 (进行中)
------------------------------------------------------------------------
1.修复关闭子进程时，由于子进程已经退出（比如login脚本成功即自动退出）导致kill的时候发生异常的问题


run-1.43
------------------------------------------------------------------------
1.新增-ap特性：支持按照特定的group和tag来分配代理。现在-ap可以附加group，tag两个参数，同时兼容老用法
2.修改关于统计action成功率方面和主服务器的交流方式。针对代理的脚本action成功率统计功能已经开放
3.新增无cookies模式，强制重新登录，配合前端登录模块
4.跳过慢、不准确、没用的bypass-suspicious-page，直接用刷新浏览器代替


run-1.42
------------------------------------------------------------------------
1.脚本在Monitor软重启时将清理所有firefox相关子进程，大幅回收内存
2.修复主服务器断开连接时，每轮请求任务时没抓异常导致的退出


droplet-1.02
------------------------------------------------------------------------
1.增加异常捕捉判断。增加对错误请求或恶意请求的防护能力
2.优化droplet服务的管理办法。现升级为由一个独立的daemon进程长期驻留。完成实际任务的worker进程作为其子进程
3.新增droplet名称保留功能。只有第一次启动服务的时候需要-n指定名称，以后python3 droplet.py即可
4.新增重启操作系统功能，操作系统重启后，droplet服务将自动开启，并且保留重启之前所有脚本
    a.重启操作系统时，开机自动mount虚拟内存
    b.重启操作系统后，droplet服务自动开启时，会自动使用重启之前的droplet-name
    c.重启操作系统后，droplet服务将自动开启在screen中。登录ssh后可直接通过screen -r访问
5.新增install.sh自动安装环境脚本
    a.自动安装所有与脚本相关的环境
    b.自动设置虚拟内存。install.sh接受一个参数表示虚拟内存大小，例如"20G"。如果没给参数，默认7G
    c.自动将droplet.py加入系统开机任务/etc/rc.local


run-1.41
------------------------------------------------------------------------
修复脚本-rc，-rp参数缺省时自动设置错误导致循环询问代理的bug


droplet-1.01
------------------------------------------------------------------------
新增刷新droplets功能。默认情况下：
    1.droplets的状态，每30秒同步到主服务器
    2.主服务器所掌握的所有droplets的已知状态，每5秒同步到前端管理器
    3.使用refresh按钮后，所有droplets将立即和主服务器同步状态，而主服务器也迅速和前端同步状态


run-1.4
------------------------------------------------------------------------
全面支持新推出的droplet.py远程脚本管理器
配合支持主服务器后端针对每个代理做独立的action失败率统计


droplet-1.00
------------------------------------------------------------------------
droplet.py远程脚本管理器诞生！
1.支持服务器自选状态最优的droplet
2.支持对每台droplet单独管理
    a.对于droplet本身，支持两个操作：git-pull，重启服务
    b.对于droplet里的脚本，支持五个操作：新增，全部删除，全部重启，单独删除，单独重启
    c.droplet关闭时，下次启动可全部恢复上次退出前的脚本；droplet重启时也一样


run-1.32