@@ -1,6 +1,10 @@
 droplet-1.03 (进行中)
 ------------------------------------------------------------------------
 1.修复关闭子进程时，由于子进程已经退出（比如login脚本成功即自动退出）导致kill的时候发生异常的问题
+2.droplet.ini配置文件也将保存上次droplet.py运行的type参数
+3.解决ubuntu-18.04及以上版本中，默认不存在/etc/rc.local的问题
+    a.新版install.sh自带创建rc.local的命令
+    b.新版install.sh增加重复运行的判断。可以多次运行install.sh而不发生冲突
 
 
 run-1.43
